k3s/infrastructure/overlays/gloo-gateway/dev/virtual-service.yaml
# base/gloo-gateway/virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: gloo-gateway-virtual-service
  namespace: gloo-gateway-dev
spec:
  virtualHost:
    domains:
      - 'demo-dev.manhlam.name.vn'
    routes:
      - matchers:
          - prefix: '*'
        options:
          extauth:
            config:
              name: opa-auth-config
              namespace: gloo-system
        routes:
          # This route is for the customer frontend service and the customer backend service
          - matchers:
              - prefix: /customer
            routeAction:
              single:
                upstream:
                  name: customer-frontend-service
                  namespace: gloo-system
          - matchers:
              - prefix: /customer/graphql
            routeAction:
              single:
                upstream:
                  name: customer-backend-service
                  namespace: gloo-system
          # This route is for the user frontend service and the user backend service
          - matchers:
              - prefix: '/graphql'
            routeAction:
              single:
                upstream:
                  name: user-bff-service
                  namespace: gloo-system
          - matchers:
              - prefix: '*'
            routeAction:
              single:
                upstream:
                  name: user-frontend-service
                  namespace: gloo-system
